@@ -22,6 +22,7 @@ namespace StructureSynth {
 			scaleV = 1;
 			scaleAlpha = 1;
 			absoluteColor = false;
+			strength = 0;
 		}
 
 		Transformation::~Transformation() {
@@ -29,12 +30,11 @@ namespace StructureSynth {
 
 		State Transformation::apply(const State& s) const {
 			State s2(s);
-			s2.matrix = s.matrix*matrix; // TODO: Check order
+			s2.matrix = s.matrix*matrix; 
 
 			if (absoluteColor) {
 				s2.hsv = Vector3f(deltaH,scaleS,scaleV);
 				s2.alpha = scaleAlpha;
-				//DEV(QString("Abs color: %1, %2, %3"));
 			} else {
 				float h = s2.hsv[0] + deltaH;
 				float sat = s2.hsv[1]*scaleS;
@@ -50,6 +50,48 @@ namespace StructureSynth {
 				while (h<0) h+=360;
 				s2.hsv = Vector3f(h,sat,v);
 				s2.alpha = a;
+
+			}
+
+			if (strength) {
+				/*
+				// We will blend the two colors (in RGB space)
+				QColor original = QColor::fromHsv((int)(s2.hsv[0]),(int)(s2.hsv[1]*255.0),(int)(s2.hsv[2]*255.0));
+				double r = original.red() + strength*blendColor.red();
+				double g = original.green() + strength*blendColor.green();
+				double b = original.blue() + strength*blendColor.blue();
+				if (r<0) r=0;
+				if (g<0) g=0;
+				if (b<0) b=0;
+				double max = r;
+				if (g>max) max = g;
+				if (b>max) max = b;
+				if (max > 255) {
+					r = r * 255 / max;
+					g = g * 255 / max;
+					b = b * 255 / max;
+				}
+
+				QColor mixed(r,g,b);
+				
+				
+				s2.hsv = Vector3f(mixed.hue(), mixed.saturation()/255.0,mixed.value()/255.0);
+				*/
+
+				// We will blend the two colors (in HSV space)
+				Vector3f bl = Vector3f(blendColor.hue(), blendColor.saturation()/255.0,blendColor.value()/255.0);
+				Vector3f b(s2.hsv[0]+strength*bl[0], s2.hsv[1]+strength*bl[1], s2.hsv[2]+strength*bl[2]);
+				b = b/(1+strength);
+				while (b[0] < 0) b[0]+= 360;
+				while (b[0] > 360) b[0]-= 360;
+				if (b[1]>1) b[1]=1;
+				if (b[2]>1) b[2]=1;
+				if (b[1]<0) b[1]=0;
+				if (b[2]<0) b[2]=0;
+				s2.hsv = b;
+				
+				
+				
 			}
 
 			return s2;
@@ -70,6 +112,11 @@ namespace StructureSynth {
 				this->deltaH = t.deltaH;
 				this->scaleS = t.scaleS;
 				this->scaleV = t.scaleV;
+			}
+
+			if (t.strength != 0) {
+				this->strength = t.strength;
+				this->blendColor = t.blendColor;
 			}
 		}
 
@@ -151,6 +198,14 @@ namespace StructureSynth {
 			return t;
 		}
 
+		Transformation Transformation::createBlend(QString color, double strength) {
+			Transformation t;
+			t.blendColor = QColor(color);
+			t.strength = strength;
+			return t;
+		}
+
+		
 
 		Transformation Transformation::createScale(double x, double y, double z) {
 			Transformation t;
